--- a/home.html
+++ b/home.html
@@ -1,6 +1,17 @@
 <html>
 <head>
 <title>my first homepage</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131778338-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-131778338-1');
+</script>
+
+  
 </head>
 <body>
 Hello Github Page
